<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rain Man</string>
    <string name="check_weather">Check Weather</string>
    <string name="check_weather_on">Alert on rain or storm conditions</string>
    <string name="check_weather_off">Don\'t poll for weather updates</string>
    <string name="check_weather_preference">check_weather_preference</string>
    <string name="gps_coordinates">GPS Coordinates</string>
    <string name="header">Weather Finder</string>
    <string name="polling_interval">Polling Interval</string>
    <string name="polling_interval_description">Time between checks for rain</string>
    <string name="polling_interval_preference">poll_interval</string>
    <string name="preferences">Preferences</string>
    <string name="retrieving">Retrieving</string>
    <string name="weather">Weather</string>
    <string name="weather_preferences">Weather Preferences</string>
    <string name="zipcode">Zipcode</string>
</resources>
