<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
        android:text="@string/header"
        style="@style/header" />

    <TextView
        android:text="@string/gps_coordinates"
        style="@style/label" />

    <TextView
        android:id="@+id/gps_coordinates"
        android:text="@string/retrieving"
        style="@style/value" />

    <TextView
        android:text="@string/zipcode"
        style="@style/label" />

    <TextView
        android:id="@+id/zipcode"
        android:text="@string/retrieving"
        style="@style/value" />

    <TextView
        android:text="@string/weather"
        style="@style/label" />

    <TextView
        android:id="@+id/weather"
        android:text="@string/retrieving"
        style="@style/value" />

    <TextView
        android:text="@string/polling_interval"
        style="@style/label" />

    <TextView
        android:id="@+id/polling_interval"
        android:text="@string/retrieving"
        style="@style/value" />

</LinearLayout>
